update to knowm-xchange 5.2.4